// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRowButton should match snapshot 1`] = `
<div
  className="add-button"
>
  <Component
    onClick={[MockFunction]}
    type="submit"
    variant="info"
  >
    Add new
  </Component>
</div>
`;

exports[`Spreadsheet should match snapshot with default props 1`] = `
<div
  className="spreadsheet"
>
  <div
    className="wrap-top"
  >
    <div
      className="description"
    />
    <div
      className="button-group"
    >
      <Component
        onChangeInput={[Function]}
      />
      <Component
        data={
          Array [
            Array [],
          ]
        }
      />
    </div>
  </div>
  <MyReactDataSheet
    cellRenderer={[Function]}
    data={
      Array [
        Array [],
      ]
    }
    dataEditor={[Function]}
    onCellsChanged={[Function]}
    onContextMenu={[Function]}
    onSelect={[Function]}
    overflow="wrap"
    rowRenderer={[Function]}
    selected={null}
    sheetRenderer={[Function]}
    valueRenderer={[Function]}
    valueViewer={[Function]}
  />
  <div
    className="wrap-bottom"
  >
    <Component
      addNewRow={[Function]}
    />
  </div>
  <Component
    contextMenuProp={
      Object {
        "left": 0,
        "top": 0,
        "visible": false,
      }
    }
    data={
      Array [
        Array [],
      ]
    }
    onCellsChanged={[Function]}
    selected={null}
    setContextMenuProp={[Function]}
  />
</div>
`;

exports[`Spreadsheet should match snapshot with full props 1`] = `
<div
  className="spreadsheet"
>
  <div
    className="wrap-top"
  >
    <div
      className="description"
    >
      des
    </div>
    <div
      className="button-group"
    />
  </div>
  <MyReactDataSheet
    cellRenderer={[Function]}
    data={
      Array [
        Array [],
      ]
    }
    dataEditor={[Function]}
    onCellsChanged={[Function]}
    onContextMenu={[Function]}
    onSelect={[Function]}
    overflow="wrap"
    rowRenderer={[Function]}
    selected={null}
    sheetRenderer={[Function]}
    valueRenderer={[Function]}
    valueViewer={[Function]}
  />
  <div
    className="wrap-bottom"
  />
  <Component
    contextMenuProp={
      Object {
        "left": 0,
        "top": 0,
        "visible": false,
      }
    }
    data={
      Array [
        Array [],
      ]
    }
    onCellsChanged={[Function]}
    selected={null}
    setContextMenuProp={[Function]}
  />
</div>
`;

exports[`UploadButton should match snapshot 1`] = `
<div
  className="upload-button"
>
  <Component
    onClick={[Function]}
    type="submit"
    variant="info"
  >
    Upload file
  </Component>
  <input
    accept=".csv"
    hidden={true}
    name="file-upload"
    onChange={[MockFunction]}
    type="file"
  />
</div>
`;
